bug - cellphone layout issues

--- a/styles.css
+++ b/styles.css
@@ -264,3 +264,20 @@ tr:nth-child(even) {
     
     
 }
+
+
+@media (max-width:400px)  { 
+    section#controls {
+        text-align: center;
+    }
+
+    section#controls fieldset  {
+        padding-bottom: 1rem;
+    }
+
+    section#controls fieldset input[type="submit"] {
+        margin: 0;
+        margin-top: .5rem;
+        padding: .6rem 1.5rem;
+    }
+}
